Criando o Pool de Conexões

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/beleg/Downloads/mysql-connector-j-8.2.0/mysql-connector-j-8.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/beleg/JAR/c3p0-0.9.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/beleg/JAR/mchange-commons-java-0.2.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
